# structlog-example

./: LICENSE  README-en.md  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  post-create-command.sh
djapp/: manage.py
djapp/app1/: admin.py  apps.py  models.py  tasks.py
djapp/app1/migrations/: 0001_initial.py
djapp/djapp/: asgi.py  celery.py  log.py  settings.py  urls.py  wsgi.py
